--- a/src/css/ParkingDetails.css
+++ b/src/css/ParkingDetails.css
@@ -63,7 +63,7 @@
 
 .parking-table th {
     padding: 12px;
-    text-align: left;
+    text-align: center;
     font-weight: 600;
     font-size: 14px;
     white-space: nowrap;
